<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEFF41"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/menu"
            android:layout_marginTop="20dp"
            android:text="@string/titulo"
            android:layout_gravity="center"
            style="@style/CardView.Dark"
            android:fontFamily="sans-serif-black"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/venta"
            android:layout_marginTop="30dp"
            android:text="@string/ventas"
            android:layout_gravity="center"
            style="@style/CardView"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <ImageView
            android:id="@+id/vent"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="0dp"
            android:src="@mipmap/ventas" />

        <TextView
            android:id="@+id/inventario"
            android:layout_marginTop="10dp"
            android:text="@string/Inventario"
            android:layout_gravity="center"
            style="@style/CardView"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/invent"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="0dp"
            android:src="@mipmap/inventarios"
             />


        <Button
            android:id="@+id/anterior"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="79dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/salir" />




    </LinearLayout>


</RelativeLayout>